# web_app_django

./: .gitignore  .pre-commit-config.yaml  README.md  db.sqlite3  manage.py  pyproject.toml
chat_app/: asgi.py  settings.py  urls.py  wsgi.py
core/: settings.py  urls.py
posts/: admin.py  models.py  views.py
posts/core/: __init__.py  post_create_form.py  post_form.py
posts/migrations/: 0001_initial.py  0002_alter_post_options_post_artist_post_url.py  0003_tag_post_tags.py  0004_alter_tag_options_tag_order.py  0005_tag_image.py  0006_post_author.py  0007_comment.py  0008_alter_comment_options_reply.py  0009_likedpost_post_likes.py  0010_likedcomment_comment_likes.py  0011_likedreply_reply_likes.py
posts/templatetags/: sidebar.py
templates/: 404.html  base.html  index.html
templates/account/: base.html  signup.html
templates/includes/: header.html  hero.html  messages.html  sidebar.html
templates/layouts/: a.html  b.html  c.html  d.html
templates/posts/: comment.html  comment_delete.html  home.html  post.html  post_create.html  post_delete.html  post_edit.html  post_page.html  reply.html  reply_delete.html
templates/snippets/: add_comment.html  add_reply.html  likes.html  likes_comment.html  likes_reply.html  loop_home_posts.html  loop_postpage_comments.html  loop_profile_comments.html  loop_profile_posts.html
templates/users/: profile.html  profile_delete.html  profile_edit.html  profile_onboarding.html
users/: apps.py  models.py  signals.py  views.py
users/core/: __init__.py  post_form.py  profile_form.py
users/migrations/: 0001_initial.py
