[tool.poetry]
name = "web-app-with-django"
version = "0.1.0"
description = ""
authors = ["verna0214 <yuhsichen0214@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pre-commit = "^4.0.1"
django = "^5.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
